[gd_scene load_steps=8 format=2]

[ext_resource path="res://Sprites/Samus/zm_power_suit.png" type="Texture" id=1]
[ext_resource path="res://Scenes/Hitboxes/Hitbox.tscn" type="PackedScene" id=2]
[ext_resource path="res://Scripts/Weapon/Missile.gd" type="Script" id=3]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 1 )
region = Rect2( 144, 144, 48, 48 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 1 )
region = Rect2( 96, 144, 48, 48 )

[sub_resource type="SpriteFrames" id=3]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 2 ) ],
"loop": true,
"name": "default",
"speed": 16.0
} ]

[sub_resource type="CapsuleShape2D" id=4]
radius = 4.0
height = 9.0

[node name="Missile" type="Area2D"]
collision_layer = 32
collision_mask = 12
script = ExtResource( 3 )
__meta__ = {
"_edit_group_": true
}

[node name="MissileSprite" type="Sprite" parent="."]
rotation = 4.71239
scale = Vector2( -1, -1 )
texture = ExtResource( 1 )
vframes = 30
hframes = 25
frame = 27

[node name="RocketSprite" type="AnimatedSprite" parent="."]
position = Vector2( -8, 0 )
rotation = 1.5708
frames = SubResource( 3 )
frame = 1
playing = true

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]
visible = false

[node name="Hitbox" parent="." instance=ExtResource( 2 )]
visible = false
collision_layer = 64
collision_mask = 2147483660

[node name="CollisionShape2D" parent="Hitbox" index="0"]
rotation = 1.5708
shape = SubResource( 4 )

[node name="Timer" type="Timer" parent="."]
wait_time = 0.1
one_shot = true
autostart = true
[connection signal="screen_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_exited"]
[connection signal="area_entered" from="Hitbox" to="." method="_on_Hitbox_area_entered"]
[connection signal="body_entered" from="Hitbox" to="." method="_on_Hitbox_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]

[editable path="Hitbox"]
